# Shiksha-Copilot

./: .gitignore  README.md
components/ingestion-pipeline/: .gitignore  README.md  pyproject.toml
components/ingestion-pipeline-mineru/: README.md  pyproject.toml
components/ingestion-pipeline-mineru/src/mineru_extractor/: __init__.py  download_models_hf.py
components/ingestion-pipeline-mineru/tests/: test_basic.py  test_grade_6_ncert.py
components/ingestion-pipeline-olmocr/: README.md  pyproject.toml
components/ingestion-pipeline-olmocr/src/olmocr_extractor/: __init__.py
components/ingestion-pipeline-olmocr/tests/: test_basic.py  test_grade_6_ncert.py
components/ingestion-pipeline/src/ingestion_pipeline/base/: data_model.py  metadata_extractor.py  pipeline.py  text_extraction_pipeline.py  text_extractor.py  text_postprocessor.py
components/ingestion-pipeline/src/ingestion_pipeline/metadata_extractors/: simple_metadata_extractor.py
components/ingestion-pipeline/src/ingestion_pipeline/text_extractors/: azure_form_recognizer.py  llm_extractor.py  llm_json_extractor.py  tesseract_ocr.py
components/ingestion-pipeline/src/ingestion_pipeline/text_postprocessors/: clean_markdown_post_processor.py
components/ingestion-pipeline/src/ingestion_pipeline/utils/: __init__.py  pdf_splitter.py  toc_extractor.py  toc_page_finder.py
components/ingestion-pipeline/tests/: test_azure_form_recognizer.py  test_clean_markdown_post_processor.py  test_llm_json_extractor.py  test_simple_metadata_extractor.py  test_tesseract.py  test_toc_page_finder.py
components/llm-queue/: .gitignore  README.md  pyproject.toml
components/llm-queue/src/llm_queue/: __init__.py  main.py  poller.py  resource_availability_checker.py  telemetry.py  user_rate_limiter.py
components/llm-queue/src/llm_queue/base/: __init__.py  adapter_base_classes.py  base_classes.py  config_data_classes.py  custom_errors.py  data_classes.py
components/llm-queue/src/llm_queue/load_balancers/: __init__.py  (+1 more)
components/llm-queue/tests/: test_basic.py
components/llm-queue/tests/configs/: llm_config.yaml
components/rag-wrapper/: README.md  pyproject.toml
components/rag-wrapper/src/rag_wrapper/: __init__.py
components/rag-wrapper/tests/: test_in_mem_rag_ops.py  test_property_graph_rag_ops.py  test_qdrant_rag_ops.py
shiksha-api/app-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build-and-push.sh  config.py  docker_commands.txt  logging_config.py  main.py  pyproject.toml  requirements.txt  setup-dev.sh
shiksha-api/app-service/api/: __init__.py  models.py
shiksha-api/app-service/api/v1/: __init__.py  agents.py  completions.py  health.py  rag.py
shiksha-api/app-service/app/: config.py  main.py
shiksha-api/app-service/app/models/: chat.py  question_paper.py
shiksha-api/app-service/app/rag-wrapper/: .env.example  README.md  pyproject.toml
shiksha-api/app-service/app/routers/: __init__.py  chat.py  question_paper.py
shiksha-api/app-service/app/services/: bing_search.py  general_chat_service.py  lesson_chat_service.py  question_paper_service.py  rag_adapter_cache.py  rag_adapters.py
shiksha-api/app-service/app/utils/: blob_store.py  logger.py  prompt_template.py
shiksha-api/app-service/prompts/: blooms_taxonomy.yaml  chat_prompts.yaml  english_grammar_topics.yaml  question_paper_prompts.yaml
shiksha-api/app-service/services/: __init__.py  autogen_service.py  azure_auth.py  litellm_service.py  rag_service.py
shiksha-api/durable-functions/: .gitignore  APIContract.md  Dockerfile  README.md  deploy_v1.sh  host.json  local.settings.example.json  pyproject.toml
shiksha-api/durable-functions/GenerateSectionActivity/: __init__.py  function.json
shiksha-api/durable-functions/LessonPlanHttpTrigger/: __init__.py  function.json
shiksha-api/durable-functions/LessonPlanOrchestrator/: __init__.py
shiksha-api/durable-functions/SectionsGraphOrchestrator/: __init__.py
shiksha-api/durable-functions/WebhookStatusActivity/: __init__.py  function.json
shiksha-api/durable-functions/core/: __init__.py  base_query_generator.py  blob_store.py  config.py  gpt_context_summarizer.py  logger.py  query_generator.py  query_generator_telangana_english_resource_plan.py  regen_query_generator.py
shiksha-api/durable-functions/core/agents/: __init__.py  agent_pool.py  base_azure_blob_rag_agent.py  base_rag_agent.py  gpt_agent.py  graph_index_rag_agent.py  in_mem_rag_agent.py  qdrant_rag_agent.py  validator_agent.py  vector_index_rag_agent.py
shiksha-api/durable-functions/core/models/: dag.py  requests.py  responses.py  status_webhook.py  workflow_models.py
shiksha-api/durable-functions/core/rag-wrapper/: pyproject.toml
shiksha-api/durable-functions/rag-wrapper/: .gitignore
shiksha-ingestion/: .gitignore  README.md  logging_config.py  pipeline_runner.py  pyproject.toml
shiksha-ingestion/index-store-deployment/: config.env.example  deploy.sh  helpers.sh  vm_provision.sh
shiksha-ingestion/neo4j/: config.env.example  deploy-neo4j-in-vm.sh
shiksha-ingestion/pipeline_steps/: __init__.py  step_0_toc_page_finding.py  step_1_toc_extraction.py  step_2_pdf_splitting.py  step_3_text_extraction_llm.py  step_3_text_extraction_llm_json.py  step_3_text_extraction_mineru.py  step_3_text_extraction_olmocr.py  step_4_clean_extracted_text.py  step_5_subtopic_chapter_level_los_extraction.py  step_6_subtopic_extraction_rule_based_cleaning.py  step_7_subtopic_wise_lo_extraction.py  step_8_create_indexes.py
shiksha-ingestion/pipeline_steps/knowledge_graph/: __init__.py  graph_visualizer.py  models.py  step_0_karnataka_lba_chapter_wise_page_range.py  step_0_karnataka_lba_text_extraction_llm.py  step_1_extract_entities.py  step_1_karnataka_lba_question_graph_entity_extraction.py  step_2_extract_entity_content.py  step_3_extract_entity_relationships.py  step_4_construct_knowledge_graph.py  step_5_export_graph_to_neo4j.py
shiksha-ingestion/pipeline_steps/knowledge_graph/karnataka_lba/: __init__.py  step_1_karnataka_lba_text_extraction_llm.py  step_3_karnataka_lba_question_graph_entity_extraction.py
(+511 files in other folders)
