[tool.poetry]
name = "shiksha-ingestion"
version = "0.1.0"
description = "Shiksha Copilot Ingestion Pipeline"
authors = ["Shiksha OSS Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
pytest = "^7.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.1"
flake8 = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies.vellm-textbook-ingestion-mineru]
path = "/home/kavyansh/ShikshaOSS/Shiksha-Copilot/components/ingestion-pipeline-mineru"
develop = true

[tool.poetry.dependencies.vellm-rag-wrapper]
path = "/home/kavyansh/ShikshaOSS/Shiksha-Copilot/components/rag-wrapper"
develop = true
