[tool.poetry]
name = "vellm-textbook-ingestion-olmocr"       # Name of your package (use underscores or dashes, no spaces)
version = "1.0.0"         # Semantic version of the package
description = "Texbook data extraction using olmOCR"
authors = ["Kavyansh Chourasia <kchourasia@microsoft.com>"]
readme = "README.md"      # Path to your README file
license = "MIT"           # License, e.g., MIT, Apache-2.0, etc.
keywords = ["textbook", "LLM", "OCR"]  # Search keywords for PyPI

packages = [
  { include = "olmocr_extractor", from = "src" }
]

# Where you declare runtime dependencies
[tool.poetry.dependencies]
python = "^3.11"
ingestion-pipeline = { path = "../ingestion-pipeline", develop = true }
flashinfer = { url = "https://github.com/flashinfer-ai/flashinfer/releases/download/v0.1.6/flashinfer-0.1.6+cu124torch2.4-cp311-cp311-linux_x86_64.whl" }
olmocr = { git = "https://github.com/allenai/olmocr.git", extras = ["gpu"] }
pypdf2 = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"             # For testing
pytest-asyncio = "^0.20.2"    # For async test support
black = "^24.3"
flake8 = "^6.0"

# Build system requirements per PEP 517 / PEP 518
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"  # Automatically configures asyncio mode
testpaths = ["tests"]  # Directory where tests are located
log_cli = true         # Enables logging during test execution
log_level = "DEBUG"    # Sets the log level
