[tool.poetry]
name = "shiksha-durable-functions"
version = "0.1.0"
description = "Shiksha Copilot Durable Functions"
authors = ["Shiksha OSS Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
pytest = "^7.0.0"
python-dotenv = "^1.0.0"
azure-functions = "1.23.0"
azure-functions-durable = "1.2.8"
pydantic = "2.11.5"
openai = "1.81.0"
azure-storage-blob = "^12.25.1"
aiofiles = "^24.1.0"
azure-identity = "^1.23.0"
vellm-rag-wrapper = { path = "core/rag-wrapper", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "24.3.0"
flake8 = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
